# smc-AARG

./: .gitignore  .gitmodules  README.md
app_versions/: readme.md
data_analysis/: createdatastruct.m  dataanalysisscript.m  datasummary.txt  device_computeanalysis.m  device_computeanalysis_StatTest.m  devicedataanalysis.m  devicedatavisualization.m  questionnaire_answers.tsv  questionnaire_computeanalysis.m  questionnaireanalysis.m
data_analysis SIMPLIFIED/: README.txt  createdatastruct.m  device_computeanalysis.m  device_computeanalysis_StatTest.m  devicedatavisualization.m  plotlongtrials.m  questionnaire_computeanalysis.m  questionnaireanalysis.m
data_analysis SIMPLIFIED/figures/: subject000.htrf.trial2.fig  subject003htrftrial3.fig  subject008.htrf.trial2.fig  subject008.panning.trial1.fig  subject008htrftrial2.fig  subject011.panning.trial2.fig  subject012.panning.trial2.fig
data_analysis SIMPLIFIED/hrtf_data/: 003_07141756_HRTF.txt  (+4 more)
getOrientation/: OFAndroid.java  OFAndroidOrientation.java  README.md  ofxAndroidOrientation.cpp
matlabPatches/: headshadow.m
pd_patches/: ITDwithTheta.pd  Makefile  distance.pd  distance_itd_rm_pm_withoutHs.pd  headShadow.c  headShadow.def  hs_itd_rm_pm.pd  itd_rm_pm_noise_withoutHS.pd
pd_patches/headshadow/: CMakeLists.txt  headShadow.c  headShadow.pd_darwin
pd_patches/headshadow/Windows_users/: headShadow.exp  headShadow.ilk  headShadow.lib
pd_patches/headshadow/Windows_users/Release/: headShadow.exp  headShadow.lib
report/: biblio.bib  main.aux  main.bbl  main.blg  main.lof  main.lot  main.tex
(+59 files in other folders)
